# hkex-analysis

./: .env.example  .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  WEB_UI_README.md  pyproject.toml  run_web.sh
config/: agents.yaml  document_filter.yaml  tools.yaml
config/prompts/: prompts.yaml
docs/: ARCHITECTURE_DIAGRAMS.md  ClickHouse查询修复报告_2025-10-30_12-46-58.md  MODEL_SELECTION_GUIDE.md  PyMuPDF依赖修复报告_2025-10-30_11-50-39.md  web文件上传修复报告_2025-10-30_11-36-48.md  修复加载问题.md  提示词AB测试计划.md  数据库初始化功能.md  系统架构图_V2.0_2025-10-29.md  错误修复报告.md
docs/执行报告/: 2025-10-25_12-32-16_LLM接口扩展与系统验证报告.md  2025-10-25_12-46-56_添加OpenRouter LLM接口.md  2025-10-25_Agent工具调用优化方案.md  2025-10-25_CLI全面重构报告.md  2025-10-25_P0完成最终报告.md  2025-10-25_P0阶段完成报告.md  2025-10-25_P1阶段完成报告.md  2025-10-25_提示词配置化改造报告.md  2025-10-29_23-40-31_Web界面目录上传功能开发.md  2025-10-29_23-49-15_文档识别优化修复.md  2025-10-30_00-02-00_可配置过滤规则系统实现.md  2025-10-30_20-15-26_提交推送代码.md  2025-10-30_20-19-46_排除PDF上传配置.md  2025-10-30_21-35-57_移除Web数据库初始化功能.md  2025-10-30_22-01-57_CLAUDE文档改进报告.md
scripts/: FINAL_REPORT.md  INDEX.md  METADATA_SCHEMA.md  README.md  chunk_pdf_by_sections.py  cleanup_duplicates.py  create_tables_v2_final.sql  document_filter.py  document_filter_configurable.py  migrate_to_v2_final.sql  optimize_indexes.sql
src/agent/: context.py  context_injector.py  data_enhancer.py  document_agent.py  memory.py  planner.py  reflector.py  schemas.py  state.py  supervisor.py
src/api/: main.py  schemas.py
src/cli/: commands.py  commands.py.backup
src/config/: settings.py
src/llm/: manager.py
src/tools/: data_enhancement.py  document_retrieval.py  (+4 more)
tests/: test_agent_optimization.md  test_prompt_loader.py
(+39 files in other folders)
